[tool.poetry]
name = "gema"
version = "0.1.0"
description = "Convert from json/xml to Pydantic/Go/Rust etc."
authors = ["long2ice <long2ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
xmltodict = "*"
Jinja2 = "*"
pydantic = "*"
fastapi = "*"
asyncmy = "*"
uvicorn = "*"
PyYAML = "*"
toml = "*"
pyhumps = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
coveralls = "*"
pytest-cov = "*"
mypy = "*"
ruff = "*"
isort = "*"
black = "*"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "*"
types-toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aerich = "gema.cli:main"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.ruff]
ignore = ['E501', 'E203']
